fix: Empty search results result in extra padding (#900)

--- a/src/property-filter/styles.scss
+++ b/src/property-filter/styles.scss
@@ -91,16 +91,6 @@
   flex: 1;
 }
 
-.results {
-  color: awsui.$color-text-form-label;
-  display: inline-block;
-  box-sizing: border-box;
-  white-space: nowrap;
-  &-visible {
-    padding-left: awsui.$space-s;
-  }
-}
-
 .separator {
   margin: 0px awsui.$space-scaled-m;
   height: 100%;
